--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/react": "^6.1.19",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "cytoscape": "^3.33.1",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
