--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.553.0",
