--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,7 +35,7 @@ jobs:
 
       # IMPORTANT: requires package-lock.json
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
