--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
-    "@react-pdf/renderer": "^4.3.1",
-    "@mui/material": "^7.3.6",
-    "@react-google-maps/api": "^2.20.7",
+    "@mui/material": "^7.3.7",
+    "@react-google-maps/api": "^2.20.8",
+    "@react-pdf/renderer": "^4.3.2",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cytoscape": "^3.33.1",
@@ -35,6 +35,7 @@
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
