--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "cytoscape": "^3.33.1",
+    "cytoscape-cose-bilkent": "^4.1.0",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
